python_for_loop_parser/docs/grammar.txt
1.	FOR_LOOP → for IDENTIFIER in ITERABLE: ACTION [else: ACTION]
2.	ITERABLE → IDENTIFIER
3.	ITERABLE → RANGE
4.	ITERABLE → LIST
5.	ITERABLE → STRING
6.	RANGE → range(ARGS)
7.	ARGS → INT | INT, INT | INT, INT, INT
8.	LIST → \[[ELEMENTS]\]
9.	TUPLE → ([ELEMENTS])
10.	ELEMENTS → ELEMENT | ELEMENT, ELEMENTS
11.	ELEMENT → IDENTIFIER
12.	ELEMENT → INT
13.	ELEMENT → FLOAT
14.	ELEMENT → STRING
15.	ACTION → STATEMENTS
16.	STATEMENTS → STATEMENT | STATEMENT SEP STATEMENTS
17.	STATEMENT → (any valid Python statement)
18.	SEP → \n
